# berrybrain

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .gitleaks.toml  AUDIT.md  CHANGELOG.md  LICENSE  OPERATIONS.md  README.md  WEBAPP_ARCHITECTURE.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  netlify.toml  planingv3.md  planningv2.md
apps/api/: Dockerfile  pyproject.toml
apps/api/benchmarks/: README.md  __init__.py  cognitive_maturity_benchmark.py  graph_performance_benchmark.py  insight_usefulness_benchmark.py  maturity_release_gate.py  semantic_search_benchmark.py
apps/api/scripts/: check_critical_coverage.py  delete_owner.py  seed_admin.py
apps/api/tests/: test_ai_content_safety.py  test_architecture_boundaries.py  test_attachment_processing.py  test_attachment_security.py  test_automation_logs.py  test_backup_portability.py  test_cognitive_maturity_benchmark.py  test_cognitive_query_resilience.py  test_cognitive_vector_store.py  test_critical_coverage.py  test_extractor_sandbox.py  test_faster_whisper_extractor.py  test_graph_inference_domain.py  test_graph_inference_transactions.py  test_graph_performance_benchmark.py  test_graph_quality.py  test_graph_write_service.py  test_home_lists.py  test_home_summary.py  test_insight_filters.py  test_insight_quality.py  test_insight_usefulness_benchmark.py  test_integration.py  test_jobs.py  test_maintenance.py  test_maturation_regressions.py  test_maturity_release_gate.py  test_maturity_service.py  test_model_invocation_ledger.py  test_queue_slo.py  (+15 more)
apps/worker/: Dockerfile  pyproject.toml
(+251 files in other folders)
