[project]
name = "berrybrain-api"
version = "0.1.0"
description = "BerryBrain local API"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "fastapi>=0.115.0",
  "httpx2>=0.28.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
