[project]
name = "berrybrain-api"
version = "1.1.0"
description = "BerryBrain local API"
requires-python = ">=3.11"
dependencies = [
  "argon2-cffi>=23.1.0",
  "cryptography>=42.0.0",
  "fastapi>=0.115.0",
  "faster-whisper>=1.2.1,<2.0",
  "httpx>=0.28.0",
  "pydantic-settings>=2.4.0",
  "pypdf>=5.0.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.30.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
