[project]
name = "berrybrain-worker"
version = "1.1.0"
description = "BerryBrain local worker"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0"
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
